# agent-notify

./: .gitignore  CLAUDE.md  README.md  install-release.sh  install.sh  notify-config.md  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-03-21-agent-notify-design.md  2026-03-21-agent-notify-plan.md  2026-03-21-hooks-version.md
docs/superpowers/plans/: 2026-03-22-notification-variants-update.md  2026-03-22-release-distribution.md  2026-03-23-codex-hook-integration.md  2026-03-23-notification-localization-and-doc-refresh.md
docs/superpowers/specs/: 2026-03-22-notification-variants-update-design.md  2026-03-22-release-distribution-design.md  2026-03-23-codex-hook-integration-design.md  2026-03-23-notification-localization-and-doc-refresh-design.md
hooks/: README.md  notify.py  settings.json
mcp/: README.md
mcp/src/agent_notify/: server.py
mcp/src/agent_notify/notifiers/: macos.py
mcp/tests/: test_macos_notifier.py
plugins/opencode/: agent-notify.js.template
scripts/: build_release.py  install.py  interactive-select.sh  providers.py
src/agent_notify/: __init__.py  server.py  store.py
src/agent_notify/notifiers/: macos.py
tests/: test_install_cli.py  test_macos_notifier.py  test_notify_runtime.py  test_release_distribution.py  test_store.py  test_tools.py
