[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-notify"
version = "0.1.0"
description = "MCP Server for desktop notifications from AI coding agents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
agent-notify = "agent_notify.server:main"
